Estilos generales y un par de utilidades

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,30 @@
 * {
     margin: 0;
     padding: 0;
+    
 }
 
 html {
     box-sizing: border-box;
-    font-family: ;
+    font-family: 'Kumbh Sans', sans-serif;
+    font-size: 62.5%;
+}
+
+body {
+    font-size: 1.8rem;
+}
+
+.bold {
+    font-weight: 700;
+}
+
+.container {
+    min-width: 1440px;
+    display: flex;
+    justify-content: center;
+}
+
+.card {
+    background-image: url('/images/bg-pattern-card.svg');
+    width: 30rem;
 }
